auto publishing updates to notebooks

--- a/ar1_bayes.ipynb
+++ b/ar1_bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aa42433d",
+   "id": "6101b12d",
    "metadata": {},
    "source": [
     "# Posterior Distributions for  AR(1) Parameters\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ddfd8ba",
+   "id": "088fb117",
    "metadata": {
     "hide-output": false
    },
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c56fa2ef",
+   "id": "cbeb1a42",
    "metadata": {
     "hide-output": false
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35541747",
+   "id": "7f68f108",
    "metadata": {},
    "source": [
     "This lecture uses Bayesian methods offered by [pymc](https://www.pymc.io/projects/docs/en/stable/) and [numpyro](https://num.pyro.ai/en/stable/) to make statistical inferences about two parameters of a univariate first-order autoregression.\n",
@@ -66,7 +66,7 @@
     "\n",
     "<a id='equation-eq-themodel'></a>\n",
     "$$\n",
-    "y_{t+1} = \\rho y_t + \\sigma_x \\epsilon_{t+1}, \\quad t \\geq 0 \\tag{10.1}\n",
+    "y_{t+1} = \\rho y_t + \\sigma_x \\epsilon_{t+1}, \\quad t \\geq 0 \\tag{9.1}\n",
     "$$\n",
     "\n",
     "where the scalars $ \\rho $ and $ \\sigma_x $ satisfy $ |\\rho| < 1 $ and $ \\sigma_x > 0 $;\n",
@@ -77,7 +77,7 @@
     "\n",
     "<a id='equation-eq-themodel-2'></a>\n",
     "$$\n",
-    "y_0 \\sim {\\cal N}(\\mu_0, \\sigma_0^2) \\tag{10.2}\n",
+    "y_0 \\sim {\\cal N}(\\mu_0, \\sigma_0^2) \\tag{9.2}\n",
     "$$\n",
     "\n",
     "Consider a sample $ \\{y_t\\}_{t=0}^T $ governed by this statistical model.\n",
@@ -91,7 +91,7 @@
     "\n",
     "where we use $ f $ to denote a generic probability density.\n",
     "\n",
-    "The  statistical model [(10.1)](#equation-eq-themodel)-[(10.2)](#equation-eq-themodel-2) implies\n",
+    "The  statistical model [(9.1)](#equation-eq-themodel)-[(9.2)](#equation-eq-themodel-2) implies\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -121,7 +121,7 @@
     "Thus, we explore consequences of making these alternative assumptions about the distribution of $ y_0 $:\n",
     "\n",
     "- A first procedure is to condition on whatever value of $ y_0 $ is observed. This amounts to assuming that the probability distribution of the random variable  $ y_0 $ is a Dirac delta function that puts probability one on the observed value of $ y_0 $.  \n",
-    "- A second procedure  assumes that $ y_0 $ is drawn from the stationary distribution of a process described by [(10.1)](#equation-eq-themodel)\n",
+    "- A second procedure  assumes that $ y_0 $ is drawn from the stationary distribution of a process described by [(9.1)](#equation-eq-themodel)\n",
     "  so that  $ y_0 \\sim {\\cal N} \\left(0, {\\sigma_x^2\\over (1-\\rho)^2} \\right) $  \n",
     "\n",
     "\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29d70dd4",
+   "id": "4d968167",
    "metadata": {
     "hide-output": false
    },
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d93443f",
+   "id": "2ff374b4",
    "metadata": {
     "hide-output": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ebe839b",
+   "id": "6594b515",
    "metadata": {},
    "source": [
     "Now we shall use Bayes’ law to construct a posterior distribution, conditioning on the initial value of $ y_0 $.\n",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a1c397d",
+   "id": "00b542c4",
    "metadata": {},
    "source": [
     "## PyMC Implementation\n",
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14f40928",
+   "id": "22bc8a05",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b4a6be5",
+   "id": "b0f47a54",
    "metadata": {},
    "source": [
     "[pmc.sample](https://www.pymc.io/projects/docs/en/v5.10.0/api/generated/pymc.sample.html#pymc-sample) by default uses the NUTS samplers to generate samples as shown in the below cell:"
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d1daebf",
+   "id": "5750f3a9",
    "metadata": {
     "hide-output": false
    },
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11ca991e",
+   "id": "8f00983c",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "738252ad",
+   "id": "c85dd51b",
    "metadata": {},
    "source": [
     "Evidently, the posteriors aren’t centered on the true values of $ .5, 1 $ that we used to generate the data.\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaf78def",
+   "id": "ecc856c2",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b6f65eb",
+   "id": "31e05ee2",
    "metadata": {},
    "source": [
     "Now we shall compute a posterior distribution after seeing the same data but instead assuming that $ y_0 $ is drawn from the stationary distribution.\n",
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bf2ee1e",
+   "id": "eaef1c61",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d32e45e8",
+   "id": "80cd1aa8",
    "metadata": {
     "hide-output": false
    },
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87ced94",
+   "id": "34b8b76f",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6974ca02",
+   "id": "f1baae3c",
    "metadata": {
     "hide-output": false
    },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7821aa92",
+   "id": "00f3dd34",
    "metadata": {},
    "source": [
     "Please note how the posterior for $ \\rho $ has shifted to the right relative to when we conditioned on $ y_0 $ instead of assuming that $ y_0 $ is drawn from the stationary distribution.\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d778ae74",
+   "id": "133d1d92",
    "metadata": {},
    "source": [
     "## Numpyro Implementation"
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "588a3a44",
+   "id": "49a4da18",
    "metadata": {
     "hide-output": false
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a566ac8",
+   "id": "fb696090",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daf920c5",
+   "id": "d68e8c33",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4670860d",
+   "id": "70aff6ac",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff39e991",
+   "id": "addfc73b",
    "metadata": {
     "hide-output": false
    },
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02721599",
+   "id": "b4d12b8e",
    "metadata": {},
    "source": [
     "Next, we again compute the posterior under the assumption that $ y_0 $ is drawn from the stationary distribution, so that\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29cb97c5",
+   "id": "c0dfc979",
    "metadata": {
     "hide-output": false
    },
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "572f8717",
+   "id": "69a309ec",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b09bdf16",
+   "id": "236344e9",
    "metadata": {
     "hide-output": false
    },
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c7a09f6",
+   "id": "576d58cf",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82130b71",
+   "id": "6248f9d1",
    "metadata": {},
    "source": [
     "Look what happened to the posterior!\n",
@@ -606,7 +606,7 @@
   }
  ],
  "metadata": {
-  "date": 1705976156.21093,
+  "date": 1706246574.4990308,
   "filename": "ar1_bayes.md",
   "kernelspec": {
    "display_name": "Python",
