--- a/exchangeable.ipynb
+++ b/exchangeable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e355330",
+   "id": "ebf0f625",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c432930f",
+   "id": "e6db4a59",
    "metadata": {},
    "source": [
     "# Exchangeability and Bayesian Updating"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b02f62f1",
+   "id": "d8e4435f",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "999d8aa1",
+   "id": "499ec0af",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9c06274",
+   "id": "d4d9e49d",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59c04621",
+   "id": "749d3edb",
    "metadata": {},
    "source": [
     "## Independently and Identically Distributed\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ad3afe4",
+   "id": "91081ebe",
    "metadata": {},
    "source": [
     "### IID Means Past Observations Don’t Tell Us Anything About Future Observations\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6df9f445",
+   "id": "42505b0a",
    "metadata": {},
    "source": [
     "## A Setting in Which Past Observations Are Informative\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ec89bae",
+   "id": "9e509fa3",
    "metadata": {},
    "source": [
     "## Relationship Between IID and Exchangeable\n",
@@ -282,7 +282,7 @@
     "\n",
     "<a id='equation-eq-definetti'></a>\n",
     "$$\n",
-    "h(W_0, W_1, \\ldots ) \\equiv \\tilde \\pi [f(W_0) f(W_1) \\cdots \\ ] + ( 1- \\tilde \\pi) [g(W_0) g(W_1) \\cdots \\ ] \\tag{15.1}\n",
+    "h(W_0, W_1, \\ldots ) \\equiv \\tilde \\pi [f(W_0) f(W_1) \\cdots \\ ] + ( 1- \\tilde \\pi) [g(W_0) g(W_1) \\cdots \\ ] \\tag{14.1}\n",
     "$$\n",
     "\n",
     "Under the unconditional distribution $ h(W_0, W_1, \\ldots ) $, the\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21c8b4c6",
+   "id": "a47852ae",
    "metadata": {},
    "source": [
     "## Exchangeability\n",
@@ -332,7 +332,7 @@
     "for a sequence does not change when the positions in the sequence in which finitely many  of random variables\n",
     "appear are altered.\n",
     "\n",
-    "Equation [(15.1)](#equation-eq-definetti) represents our instance of an exchangeable joint density over a sequence of random\n",
+    "Equation [(14.1)](#equation-eq-definetti) represents our instance of an exchangeable joint density over a sequence of random\n",
     "variables  as a **mixture**  of  two IID joint densities over a sequence of random variables.\n",
     "\n",
     "For a Bayesian statistician, the mixing parameter $ \\tilde \\pi \\in (0,1) $ has a special interpretation\n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28718803",
+   "id": "2f5131db",
    "metadata": {},
    "source": [
     "## Bayes’ Law\n",
@@ -401,10 +401,10 @@
     "\n",
     "<a id='equation-eq-bayes102'></a>\n",
     "$$\n",
-    "\\pi_{t+1} = \\frac{\\pi_t f(w_{t+1})}{\\pi_t f(w_{t+1}) + (1 - \\pi_t) g(w_{t+1})} \\tag{15.2}\n",
+    "\\pi_{t+1} = \\frac{\\pi_t f(w_{t+1})}{\\pi_t f(w_{t+1}) + (1 - \\pi_t) g(w_{t+1})} \\tag{14.2}\n",
     "$$\n",
     "\n",
-    "Equation [(15.2)](#equation-eq-bayes102) follows from Bayes’ rule, which\n",
+    "Equation [(14.2)](#equation-eq-bayes102) follows from Bayes’ rule, which\n",
     "tells us that\n",
     "\n",
     "$$\n",
@@ -422,19 +422,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "642d4c83",
+   "id": "768f5344",
    "metadata": {},
    "source": [
     "## More Details about Bayesian Updating\n",
     "\n",
-    "Let’s stare at and rearrange Bayes’ Law as represented in equation [(15.2)](#equation-eq-bayes102) with the aim of understanding\n",
+    "Let’s stare at and rearrange Bayes’ Law as represented in equation [(14.2)](#equation-eq-bayes102) with the aim of understanding\n",
     "how the **posterior** probability $ \\pi_{t+1} $ is influenced by the **prior** probability $ \\pi_t $ and the **likelihood ratio**\n",
     "\n",
     "$$\n",
     "l(w) = \\frac{f(w)}{g(w)}\n",
     "$$\n",
     "\n",
-    "It is convenient for us to rewrite the updating rule [(15.2)](#equation-eq-bayes102) as\n",
+    "It is convenient for us to rewrite the updating rule [(14.2)](#equation-eq-bayes102) as\n",
     "\n",
     "$$\n",
     "\\pi_{t+1}   =\\frac{\\pi_{t}f\\left(w_{t+1}\\right)}{\\pi_{t}f\\left(w_{t+1}\\right)+\\left(1-\\pi_{t}\\right)g\\left(w_{t+1}\\right)}\n",
@@ -450,7 +450,7 @@
     "\\frac{\\pi_{t+1}}{\\pi_{t}}=\\frac{l\\left(w_{t+1}\\right)}{\\pi_{t}l\\left(w_{t+1}\\right)+\\left(1-\\pi_{t}\\right)}\\begin{cases} >1 &\n",
     "\\text{if }l\\left(w_{t+1}\\right)>1\\\\\n",
     "\\leq1 & \\text{if }l\\left(w_{t+1}\\right)\\leq1\n",
-    "\\end{cases} \\tag{15.3}\n",
+    "\\end{cases} \\tag{14.3}\n",
     "$$\n",
     "\n",
     "Notice how the likelihood ratio and the prior interact to determine whether an observation $ w_{t+1} $ leads the decision maker\n",
@@ -460,7 +460,7 @@
     "$ \\pi $ put on distribution $ F $ upward,\n",
     "and when the likelihood ratio $ l(w_{t+1}) $ is less that  one, the observation $ w_{t+1} $ nudges $ \\pi $ downward.\n",
     "\n",
-    "Representation [(15.3)](#equation-eq-bayes103) is the foundation of some graphs that we’ll use to display the dynamics of\n",
+    "Representation [(14.3)](#equation-eq-bayes103) is the foundation of some graphs that we’ll use to display the dynamics of\n",
     "$ \\{\\pi_t\\}_{t=0}^\\infty $ that are  induced by\n",
     "Bayes’ Law.\n",
     "\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e46f284a",
+   "id": "173d9c22",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8f0919e",
+   "id": "9c42117f",
    "metadata": {},
    "source": [
     "Now we’ll create a group of graphs that illustrate  dynamics induced by Bayes’ Law.\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c611f34",
+   "id": "65141c32",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be012492",
+   "id": "48e22d5c",
    "metadata": {},
    "source": [
     "Please look at the three graphs above created for an instance in which $ f $ is a uniform distribution on $ [0,1] $\n",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b0adc1d",
+   "id": "8834f388",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81c04b41",
+   "id": "8405fce5",
    "metadata": {},
    "source": [
     "Notice how the likelihood ratio, the middle graph, and the arrows compare with the previous instance of our example."
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7d2d2f3",
+   "id": "2560beab",
    "metadata": {},
    "source": [
     "## Appendix"
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0017cc11",
+   "id": "31660954",
    "metadata": {},
    "source": [
     "### Sample Paths of $ \\pi_t $\n",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e887ba9",
+   "id": "8d62ed6d",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46201747",
+   "id": "204847c1",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea413f57",
+   "id": "9d4d2bd6",
    "metadata": {},
    "source": [
     "We begin by generating $ N $ simulated $ \\{\\pi_t\\} $ paths with $ T $\n",
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82b286e6",
+   "id": "a5a5a5d1",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f83eca8",
+   "id": "7734f059",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8adab112",
+   "id": "cf722f06",
    "metadata": {},
    "source": [
     "In the above example,  for most paths $ \\pi_t \\rightarrow 1 $.\n",
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c779e990",
+   "id": "e772dd4a",
    "metadata": {
     "hide-output": false
    },
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e7b6f19",
+   "id": "d984f1e1",
    "metadata": {},
    "source": [
     "In the above graph we observe that now  most paths $ \\pi_t \\rightarrow 0 $."
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8051bc1",
+   "id": "37ed83a5",
    "metadata": {},
    "source": [
     "### Rates of convergence\n",
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e609972",
+   "id": "1979fa14",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32e414d5",
+   "id": "17f9bc51",
    "metadata": {},
    "source": [
     "From the above graph, rates of convergence appear not to depend on whether $ F $ or $ G $ generates the data."
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1ebe232",
+   "id": "ac06cbfa",
    "metadata": {},
    "source": [
     "### Graph of Ensemble Dynamics of $ \\pi_t $\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9be156f6",
+   "id": "f88f9c3f",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed1f1c98",
+   "id": "aff57997",
    "metadata": {},
    "source": [
     "First, consider the case where $ F_a=F_b=1 $ and\n",
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30d7ffb2",
+   "id": "7ebe6607",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b34849b",
+   "id": "f5befd3a",
    "metadata": {},
    "source": [
     "The above graphs shows that when $ F $ generates the data, $ \\pi_t $ on average always heads north, while\n",
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc955ecc",
+   "id": "b8722c56",
    "metadata": {
     "hide-output": false
    },
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "661310fd",
+   "id": "fe5cd97a",
    "metadata": {},
    "source": [
     "The above graph says that $ \\pi_t $ is inert and  remains at its initial value.\n",
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae50107e",
+   "id": "c51585d8",
    "metadata": {
     "hide-output": false
    },
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0cba997",
+   "id": "6b14099f",
    "metadata": {},
    "source": [
     "## Sequels\n",
@@ -1007,7 +1007,7 @@
   }
  ],
  "metadata": {
-  "date": 1705976156.6263037,
+  "date": 1706246574.841498,
   "filename": "exchangeable.md",
   "kernelspec": {
    "display_name": "Python",
