--- a/hoist_failure.ipynb
+++ b/hoist_failure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b3e791b1",
+   "id": "01e9bf3e",
    "metadata": {},
    "source": [
     "# Fault Tree Uncertainties"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "350c7c46",
+   "id": "fa24505d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c60f2d07",
+   "id": "0c02b875",
    "metadata": {
     "hide-output": false
    },
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02da699b",
+   "id": "6f8c8521",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f777fb92",
+   "id": "8fd18497",
    "metadata": {
     "hide-output": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7543abd6",
+   "id": "eda0c0ca",
    "metadata": {},
    "source": [
     "## Log normal distribution\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5ee15f6",
+   "id": "8455bfe1",
    "metadata": {},
    "source": [
     "## The Convolution Property\n",
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adbcc3bc",
+   "id": "19c741f1",
    "metadata": {
     "hide-output": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9e9f299",
+   "id": "96481332",
    "metadata": {},
    "source": [
     "A little later we’ll explain some advantages that come from using `scipy.signal.ftconvolve` rather than `numpy.convolve`.numpy program convolve.\n",
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1b88b68",
+   "id": "1f9d5e92",
    "metadata": {},
    "source": [
     "## Approximating Distributions\n",
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e03d544",
+   "id": "3b4eeda8",
    "metadata": {
     "hide-output": false
    },
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7775b139",
+   "id": "79d99209",
    "metadata": {
     "hide-output": false
    },
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e50eda8",
+   "id": "d7dd5a5e",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "436a3e2d",
+   "id": "52657ac3",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d299bfed",
+   "id": "81a43813",
    "metadata": {},
    "source": [
     "Here are helper functions that create a discretized version of a log normal\n",
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f5482d7",
+   "id": "3dd1c180",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0fc0a3c",
+   "id": "adda3220",
    "metadata": {},
    "source": [
     "Now we shall set a grid length $ I $ and a grid increment size $ m =1 $ for our discretizations.\n",
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7d07202",
+   "id": "225af04d",
    "metadata": {
     "hide-output": false
    },
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "929ada09",
+   "id": "fb0fd43b",
    "metadata": {
     "hide-output": false
    },
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00472813",
+   "id": "258ddfee",
    "metadata": {
     "hide-output": false
    },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92f8e57b",
+   "id": "5e5dc4e6",
    "metadata": {},
    "source": [
     "## Convolving Probability Mass Functions\n",
@@ -462,7 +462,7 @@
     "\n",
     "<a id='equation-eq-ft1'></a>\n",
     "$$\n",
-    "x(\\omega_j) = \\sum_{t=0}^{T-1} x_t \\exp(- i \\omega_j t) \\tag{20.1}\n",
+    "x(\\omega_j) = \\sum_{t=0}^{T-1} x_t \\exp(- i \\omega_j t) \\tag{19.1}\n",
     "$$\n",
     "\n",
     "where $ \\omega_j = \\frac{2 \\pi j}{T} $ for $ j=0, 1, \\ldots, T-1 $.\n",
@@ -472,12 +472,12 @@
     "\n",
     "<a id='equation-eq-ift1'></a>\n",
     "$$\n",
-    "x_t = T^{-1} \\sum_{j=0}^{T-1} x(\\omega_j) \\exp (i \\omega_j t) \\tag{20.2}\n",
+    "x_t = T^{-1} \\sum_{j=0}^{T-1} x(\\omega_j) \\exp (i \\omega_j t) \\tag{19.2}\n",
     "$$\n",
     "\n",
     "The sequences $ \\{x_t\\}_{t=0}^{T-1} $ and $ \\{x(\\omega_j)\\}_{j=0}^{T-1} $ contain the same information.\n",
     "\n",
-    "The pair of equations [(20.1)](#equation-eq-ft1) and [(20.2)](#equation-eq-ift1) tell how to recover one series from its Fourier partner.\n",
+    "The pair of equations [(19.1)](#equation-eq-ft1) and [(19.2)](#equation-eq-ift1) tell how to recover one series from its Fourier partner.\n",
     "\n",
     "The program `scipy.signal.fftconvolve` deploys  the theorem that  a convolution of two sequences $ \\{f_k\\}, \\{g_k\\} $ can be computed in the following way:\n",
     "\n",
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "526f8e6b",
+   "id": "499a8489",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5412040",
+   "id": "f70f42b3",
    "metadata": {},
    "source": [
     "The fast Fourier transform is two orders of magnitude faster than `numpy.convolve`\n",
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fea649ef",
+   "id": "e31c52b0",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd2f23a6",
+   "id": "4238f159",
    "metadata": {
     "hide-output": false
    },
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd870dd4",
+   "id": "35468d03",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abdffeb6",
+   "id": "64186b83",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1fdf5bd",
+   "id": "0f91c8b3",
    "metadata": {},
    "source": [
     "## Failure Tree Analysis\n",
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf0d143e",
+   "id": "3d3d6da8",
    "metadata": {},
    "source": [
     "## Application\n",
@@ -686,7 +686,7 @@
     "\n",
     "<a id='equation-eq-probtop'></a>\n",
     "$$\n",
-    "P(F) \\approx \\sum_{i=1}^n P (A_i) \\tag{20.3}\n",
+    "P(F) \\approx \\sum_{i=1}^n P (A_i) \\tag{19.3}\n",
     "$$\n",
     "\n",
     "Probabilities for each event are recorded as failure rates per year."
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b06f547",
+   "id": "16244e3a",
    "metadata": {},
    "source": [
     "## Failure Rates Unknown\n",
@@ -735,12 +735,12 @@
     "\n",
     "\n",
     "The analyst calculates the probability mass function for the **top event** $ F $, i.e., a **system failure**,  by repeatedly applying the convolution theorem to compute the probability distribution of a sum of independent log normal random variables, as described in equation\n",
-    "[(20.3)](#equation-eq-probtop)."
+    "[(19.3)](#equation-eq-probtop)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13640dc8",
+   "id": "53f42a0e",
    "metadata": {},
    "source": [
     "## Waste Hoist Failure Rate\n",
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f25ce4b",
+   "id": "6b18fd05",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70c590a2",
+   "id": "3853f544",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83001e19",
+   "id": "2440cedc",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2fead5f",
+   "id": "aceb0c46",
    "metadata": {},
    "source": [
     "We compute the required thirteen convolutions in the following code.\n",
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2ba0742",
+   "id": "e5cc7e21",
    "metadata": {
     "hide-output": false
    },
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4651be9e",
+   "id": "d9059a3e",
    "metadata": {
     "hide-output": false
    },
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5384427b",
+   "id": "31533cf6",
    "metadata": {},
    "source": [
     "The above table agrees closely with column 2 of  Table 11 on p. 28 of  of [[GS93](https://python.quantecon.org/zreferences.html#id258)].\n",
@@ -936,7 +936,7 @@
   }
  ],
  "metadata": {
-  "date": 1705976156.6816044,
+  "date": 1706246574.892568,
   "filename": "hoist_failure.md",
   "kernelspec": {
    "display_name": "Python",
