--- a/multi_hyper.ipynb
+++ b/multi_hyper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ba593906",
+   "id": "927fcab2",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c41c914",
+   "id": "50c0b1a3",
    "metadata": {},
    "source": [
     "# Multivariate Hypergeometric Distribution"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f91d14bf",
+   "id": "c99f90bd",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d2b6305",
+   "id": "27021402",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "037e4463",
+   "id": "23e1ac3e",
    "metadata": {},
    "source": [
     "## The Administrator’s Problem\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c8444a3",
+   "id": "d0136f1d",
    "metadata": {},
    "source": [
     "### Details of the Awards Procedure Under Study\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4d46087",
+   "id": "cee50a85",
    "metadata": {},
    "source": [
     "### Multivariate Hypergeometric Distribution\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124d3db8",
+   "id": "f71c8b05",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87e602ee",
+   "id": "2a5025c8",
    "metadata": {},
    "source": [
     "To recapitulate, we assume there are in total $ c $ types of objects in an urn.\n",
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36166274",
+   "id": "a416e4f2",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d23f2ba9",
+   "id": "84476908",
    "metadata": {},
    "source": [
     "## Usage"
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e4000a1",
+   "id": "c52e9ff0",
    "metadata": {},
    "source": [
     "### First example\n",
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65980c33",
+   "id": "2ebe9e69",
    "metadata": {
     "hide-output": false
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e63a3f46",
+   "id": "1abda759",
    "metadata": {},
    "source": [
     "Now use the Urn Class method `pmf` to compute the probability of the outcome $ X = \\begin{pmatrix} 2 & 2 & 2 \\end{pmatrix} $"
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10c1a3cd",
+   "id": "841d36cd",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac50b78a",
+   "id": "b89b54ac",
    "metadata": {},
    "source": [
     "We can use the code to compute probabilities of a list of possible outcomes by\n",
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4fa9c67",
+   "id": "b9c6983b",
    "metadata": {
     "hide-output": false
    },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f75d397b",
+   "id": "3a99fe7c",
    "metadata": {},
    "source": [
     "Now let’s compute the mean vector and variance-covariance matrix."
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01676c7d",
+   "id": "262daf34",
    "metadata": {
     "hide-output": false
    },
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3081d8e",
+   "id": "84a455d6",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fa653ed",
+   "id": "955b9d05",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efa61a6a",
+   "id": "fba92a21",
    "metadata": {},
    "source": [
     "### Back to The Administrator’s Problem\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d362cbad",
+   "id": "2d19be79",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3afbbc31",
+   "id": "44a4471f",
    "metadata": {},
    "source": [
     "Let’s compute the probability of the outcome $ \\left(10, 1, 4, 0 \\right) $."
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0828a09a",
+   "id": "9b28ba76",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d21be50",
+   "id": "6b3c8053",
    "metadata": {},
    "source": [
     "We can compute probabilities of three possible outcomes by constructing a 3-dimensional\n",
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9afd84e3",
+   "id": "f861355a",
    "metadata": {
     "hide-output": false
    },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05bc2f6c",
+   "id": "d100b162",
    "metadata": {},
    "source": [
     "Now let’s compute the mean and variance-covariance matrix of $ X $ when $ n=6 $."
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b06ac89",
+   "id": "c035a722",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b478de9",
+   "id": "10f39730",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4128aa35",
+   "id": "61361f69",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "981409d4",
+   "id": "5c5b6d8b",
    "metadata": {},
    "source": [
     "We can simulate a large sample and verify that sample means and covariances closely approximate the population means and covariances."
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "902ef06d",
+   "id": "47fde3e4",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60058cc1",
+   "id": "bc8a5283",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cde65d1",
+   "id": "6c47c93b",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ad8dbf",
+   "id": "e74a25ad",
    "metadata": {},
    "source": [
     "Evidently, the sample means and covariances approximate their population counterparts well."
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "729d8c1a",
+   "id": "9749e4b2",
    "metadata": {},
    "source": [
     "### Quality of Normal Approximation\n",
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7f184ac",
+   "id": "3b94f0cf",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb4a8074",
+   "id": "494b5f8f",
    "metadata": {
     "hide-output": false
    },
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a1360aa",
+   "id": "a5d4f265",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bc1996c",
+   "id": "5a9ab3b4",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75eb78d",
+   "id": "a8f12957",
    "metadata": {},
    "source": [
     "The diagonal graphs plot the marginal distributions of $ k_i $ for\n",
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d205ff9",
+   "id": "c1e4ff9c",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb2a4ec7",
+   "id": "269dcfa7",
    "metadata": {},
    "source": [
     "As we can see, all the p-values are almost $ 0 $ and the null hypothesis is soundly rejected.\n",
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcd13b9d",
+   "id": "8f27613d",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfb53b35",
+   "id": "98ed5898",
    "metadata": {},
    "source": [
     "The lesson to take away from this is that the normal approximation is imperfect."
@@ -783,7 +783,7 @@
   }
  ],
  "metadata": {
-  "date": 1705976157.177197,
+  "date": 1706246575.3554652,
   "filename": "multi_hyper.md",
   "kernelspec": {
    "display_name": "Python",
