--- a/wald_friedman.ipynb
+++ b/wald_friedman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "806e747e",
+   "id": "10f17800",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a8b62f7",
+   "id": "cd46a53f",
    "metadata": {},
    "source": [
     "# A Problem that Stumped Milton Friedman\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d69aabc2",
+   "id": "191cf489",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84727c91",
+   "id": "4965d7cf",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d8a45d2",
+   "id": "34e0c818",
    "metadata": {
     "hide-output": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2d6aa07",
+   "id": "29ba9f78",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33ed63da",
+   "id": "776490f0",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7cf6a8e",
+   "id": "54ff3497",
    "metadata": {},
    "source": [
     "This lecture uses ideas studied in [this lecture](https://python.quantecon.org/likelihood_ratio_process.html), [this lecture](https://python.quantecon.org/likelihood_bayes.html).\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9292fa5",
+   "id": "37ee5257",
    "metadata": {},
    "source": [
     "## Origin of the Problem\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ba7ac03",
+   "id": "50acbb39",
    "metadata": {},
    "source": [
     "## A Dynamic Programming Approach\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ef4ae66",
+   "id": "62a7a40d",
    "metadata": {
     "hide-output": false
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7b4e443",
+   "id": "b26dbfa3",
    "metadata": {},
    "source": [
     "### Losses and Costs\n",
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a565ab1",
+   "id": "36b0290c",
    "metadata": {},
    "source": [
     "### Digression on Type I and Type II Errors\n",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c77b096",
+   "id": "a02d9049",
    "metadata": {},
    "source": [
     "### Intuition\n",
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b716b98",
+   "id": "2ec978d6",
    "metadata": {},
    "source": [
     "### A Bellman Equation\n",
@@ -380,7 +380,7 @@
     "    \\left\\{\n",
     "        (1-\\pi) L_0, \\; \\pi L_1, \\;\n",
     "        c + \\mathbb E [ J (\\pi') ]\n",
-    "    \\right\\} \\tag{14.1}\n",
+    "    \\right\\} \\tag{13.1}\n",
     "$$\n",
     "\n",
     "where $ \\pi' $ is the random variable defined by Bayes’ Law\n",
@@ -408,7 +408,7 @@
     "<a id='equation-optdec'></a>\n",
     "$$\n",
     "J(\\pi) =\n",
-    "\\min \\left\\{ (1-\\pi) L_0, \\; \\pi L_1, \\; h(\\pi) \\right\\} \\tag{14.2}\n",
+    "\\min \\left\\{ (1-\\pi) L_0, \\; \\pi L_1, \\; h(\\pi) \\right\\} \\tag{13.2}\n",
     "$$\n",
     "\n",
     "where $ \\pi \\in [0,1] $ and\n",
@@ -446,7 +446,7 @@
     "Our aim is to compute the cost function $ J $, and from it the associated cutoffs $ \\alpha $\n",
     "and $ \\beta $.\n",
     "\n",
-    "To make our computations manageable, using [(14.2)](#equation-optdec), we can write the continuation cost $ h(\\pi) $ as\n",
+    "To make our computations manageable, using [(13.2)](#equation-optdec), we can write the continuation cost $ h(\\pi) $ as\n",
     "\n",
     "\n",
     "<a id='equation-optdec2'></a>\n",
@@ -455,7 +455,7 @@
     "h(\\pi) &= c + \\mathbb E [J(\\pi')] \\\\\n",
     "&= c + \\mathbb E_{\\pi'} \\min \\{ (1 - \\pi') L_0, \\pi' L_1, h(\\pi') \\} \\\\\n",
     "&= c + \\int \\min \\{ (1 - \\kappa(z', \\pi) ) L_0, \\kappa(z', \\pi)  L_1, h(\\kappa(z', \\pi) ) \\} f_\\pi (z') dz'\n",
-    "\\end{aligned} \\tag{14.3}\n",
+    "\\end{aligned} \\tag{13.3}\n",
     "$$\n",
     "\n",
     "The equality\n",
@@ -464,13 +464,13 @@
     "<a id='equation-funceq'></a>\n",
     "$$\n",
     "h(\\pi) =\n",
-    "c + \\int \\min \\{ (1 - \\kappa(z', \\pi) ) L_0, \\kappa(z', \\pi)  L_1, h(\\kappa(z', \\pi) ) \\} f_\\pi (z') dz' \\tag{14.4}\n",
+    "c + \\int \\min \\{ (1 - \\kappa(z', \\pi) ) L_0, \\kappa(z', \\pi)  L_1, h(\\kappa(z', \\pi) ) \\} f_\\pi (z') dz' \\tag{13.4}\n",
     "$$\n",
     "\n",
     "is a **functional equation** in an unknown function  $ h $.\n",
     "\n",
-    "Using the functional equation, [(14.4)](#equation-funceq), for the continuation cost, we can back out\n",
-    "optimal choices using the right side of [(14.2)](#equation-optdec).\n",
+    "Using the functional equation, [(13.4)](#equation-funceq), for the continuation cost, we can back out\n",
+    "optimal choices using the right side of [(13.2)](#equation-optdec).\n",
     "\n",
     "This functional equation can be solved by taking an initial guess and iterating\n",
     "to find a fixed point.\n",
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b696b512",
+   "id": "ca04c5f6",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84ef1f67",
+   "id": "cd383b7d",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9dd9efc",
+   "id": "b26feabe",
    "metadata": {
     "hide-output": false
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45c1c748",
+   "id": "fd16c577",
    "metadata": {},
    "source": [
     "As in the [optimal growth lecture](https://quantecon.github.io/lecture-dynamics/optgrowth.html), to approximate a continuous value function\n",
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "924fb500",
+   "id": "9986904c",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ddb74f1",
+   "id": "ef098d77",
    "metadata": {},
    "source": [
     "To solve the key functional equation, we will iterate using `Q` to find the fixed point"
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc062c61",
+   "id": "4199568b",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3c93246",
+   "id": "6c92d958",
    "metadata": {},
    "source": [
     "## Analysis\n",
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "976c8368",
+   "id": "d60d59df",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99a8fd73",
+   "id": "ec0e403c",
    "metadata": {},
    "source": [
     "### Value Function\n",
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acd8bbb8",
+   "id": "237528c2",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aba7809",
+   "id": "d6291bc7",
    "metadata": {},
    "source": [
     "We will also set up a function to compute the cutoffs $ \\alpha $ and $ \\beta $\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c384f40a",
+   "id": "cb2e46ee",
    "metadata": {
     "hide-output": false
    },
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9caede20",
+   "id": "28349e0c",
    "metadata": {},
    "source": [
     "The cost function $ J $ equals $ \\pi L_1 $ for $ \\pi \\leq \\beta $, and $ (1-\\pi )L_0 $ for $ \\pi\n",
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2231bb76",
+   "id": "5e4b5234",
    "metadata": {},
    "source": [
     "### Simulations\n",
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1223ad4f",
+   "id": "d956ad1a",
    "metadata": {
     "hide-output": false
    },
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95b9e967",
+   "id": "8254c5e5",
    "metadata": {},
    "source": [
     "### Comparative Statics\n",
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94a4c555",
+   "id": "725fabb5",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5ab4f0d",
+   "id": "bdb7a174",
    "metadata": {},
    "source": [
     "Increased cost per draw has induced the decision-maker to take fewer draws before deciding.\n",
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65f7b388",
+   "id": "1c0180b0",
    "metadata": {},
    "source": [
     "### A Notebook Implementation\n",
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfeaa51c",
+   "id": "3b241841",
    "metadata": {},
    "source": [
     "## Comparison with Neyman-Pearson Formulation\n",
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d177e23c",
+   "id": "42513b04",
    "metadata": {},
    "source": [
     "## Sequels\n",
@@ -1198,7 +1198,7 @@
   }
  ],
  "metadata": {
-  "date": 1705976158.1182096,
+  "date": 1706246576.225045,
   "filename": "wald_friedman.md",
   "kernelspec": {
    "display_name": "Python",
