--- a/bayes_nonconj.ipynb
+++ b/bayes_nonconj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "da6a89b5",
+   "id": "ef7bd4e6",
    "metadata": {},
    "source": [
     "# Non-Conjugate Priors\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4f6586f",
+   "id": "7c4a8d8e",
    "metadata": {
     "hide-output": false
    },
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e3e09c9",
+   "id": "66997200",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31cd5025",
+   "id": "fca57ad9",
    "metadata": {},
    "source": [
     "## Unleashing MCMC on a  Binomial Likelihood\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af6068fe",
+   "id": "66123d94",
    "metadata": {},
    "source": [
     "### Analytical Posterior\n",
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e77d4069",
+   "id": "2f50e0e1",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81edd3fe",
+   "id": "3c5a6930",
    "metadata": {},
    "source": [
     "### Two Ways to Approximate Posteriors\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd0ce7f8",
+   "id": "688bb839",
    "metadata": {},
    "source": [
     "## Prior Distributions\n",
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c32db41a",
+   "id": "35107e27",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fb18953",
+   "id": "ac1548e9",
    "metadata": {},
    "source": [
     "### Variational Inference\n",
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b15d5c5",
+   "id": "2dcc5a01",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d39b59dd",
+   "id": "4bb53647",
    "metadata": {
     "hide-output": false
    },
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "706992a0",
+   "id": "e236f7d0",
    "metadata": {},
    "source": [
     "## Alternative Prior Distributions\n",
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a24cd5a5",
+   "id": "0d0e8112",
    "metadata": {
     "hide-output": false
    },
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84122ba6",
+   "id": "dda86315",
    "metadata": {},
    "source": [
     "The above graphs show that sampling seems to work well with both distributions.\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfebddfe",
+   "id": "59ec49b5",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476f30e7",
+   "id": "0ebe6130",
    "metadata": {},
    "source": [
     "These graphs look good too.\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97abe36f",
+   "id": "0eaa4425",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42b113f6",
+   "id": "f11b6b88",
    "metadata": {},
    "source": [
     "Having assured ourselves that our sampler seems to do a good job, let’s put it to work in using MCMC to compute posterior probabilities."
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c12ad27a",
+   "id": "0a1c8563",
    "metadata": {},
    "source": [
     "## Posteriors Via MCMC and VI\n",
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31778268",
+   "id": "d9170047",
    "metadata": {
     "hide-output": false
    },
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9fdb608",
+   "id": "92329529",
    "metadata": {},
    "source": [
     "Let’s set some parameters that we’ll use in all of the examples  below.\n",
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecaf0acc",
+   "id": "5afbb60e",
    "metadata": {
     "hide-output": false
    },
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f124e693",
+   "id": "635d09ea",
    "metadata": {},
    "source": [
     "### Beta Prior and Posteriors:\n",
@@ -1041,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "497e524f",
+   "id": "65479244",
    "metadata": {
     "hide-output": false
    },
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8545d82",
+   "id": "90ba9803",
    "metadata": {},
    "source": [
     "Now let’s use MCMC while still using a beta prior.\n",
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d84bcdc4",
+   "id": "d604c24c",
    "metadata": {
     "hide-output": false
    },
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8571d326",
+   "id": "4d6b91a0",
    "metadata": {},
    "source": [
     "Here the MCMC approximation looks good.\n",
@@ -1122,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73e5e29c",
+   "id": "6924f736",
    "metadata": {
     "hide-output": false
    },
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f785e934",
+   "id": "dee8d593",
    "metadata": {},
    "source": [
     "## Non-conjugate Prior Distributions\n",
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de175f29",
+   "id": "bac28673",
    "metadata": {},
    "source": [
     "### MCMC\n",
@@ -1159,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d67c3851",
+   "id": "ee32687b",
    "metadata": {
     "hide-output": false
    },
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d627cec",
+   "id": "6841e2fd",
    "metadata": {
     "hide-output": false
    },
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47897f1e",
+   "id": "ac095f07",
    "metadata": {},
    "source": [
     "In the situation depicted above, we have assumed a  $ Uniform(\\underline{\\theta}, \\overline{\\theta}) $ prior that puts zero probability   outside a bounded support that excludes the true value.\n",
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6d163d8",
+   "id": "87fe4bcd",
    "metadata": {
     "hide-output": false
    },
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05ffe697",
+   "id": "f6f85e61",
    "metadata": {
     "hide-output": false
    },
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "defa31f1",
+   "id": "6695a4d8",
    "metadata": {
     "hide-output": false
    },
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f26ede53",
+   "id": "ad2310f2",
    "metadata": {},
    "source": [
     "To get more accuracy we will now increase the number of steps for Variational Inference (VI)"
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "460eb48a",
+   "id": "75cc857d",
    "metadata": {
     "hide-output": false
    },
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2b9adfd",
+   "id": "c120b6ec",
    "metadata": {},
    "source": [
     "#### VI with a  Truncated Normal Guide"
@@ -1301,7 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47e0e387",
+   "id": "c24aba4a",
    "metadata": {
     "hide-output": false
    },
@@ -1316,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ca69c04",
+   "id": "cd1f760e",
    "metadata": {
     "hide-output": false
    },
@@ -1331,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab8ab7b0",
+   "id": "aaec2414",
    "metadata": {
     "hide-output": false
    },
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d64fcb",
+   "id": "913fa9c3",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9398ba28",
+   "id": "9a5aca3f",
    "metadata": {},
    "source": [
     "#### Variational Inference with a  Beta Guide Distribution"
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "529d377a",
+   "id": "8f1960b6",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9783e0d",
+   "id": "2ba17add",
    "metadata": {
     "hide-output": false
    },
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b6454aa",
+   "id": "b25b6282",
    "metadata": {
     "hide-output": false
    },
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d69bca9",
+   "id": "148a34f8",
    "metadata": {
     "hide-output": false
    },
@@ -1439,7 +1439,7 @@
   }
  ],
  "metadata": {
-  "date": 1705976156.566749,
+  "date": 1706246574.7847593,
   "filename": "bayes_nonconj.md",
   "kernelspec": {
    "display_name": "Python",
