--- a/lln_clt.ipynb
+++ b/lln_clt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "116a0462",
+   "id": "e232946b",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a966310",
+   "id": "d3593b30",
    "metadata": {},
    "source": [
     "# LLN and CLT\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e172cb7",
+   "id": "d9f75ab3",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfe12f45",
+   "id": "12c10bd1",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57994992",
+   "id": "20f0bc9d",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d73cdeea",
+   "id": "fbdae437",
    "metadata": {},
    "source": [
     "## Relationships\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44420b0b",
+   "id": "54fb8b58",
    "metadata": {},
    "source": [
     "## LLN\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9de5f96",
+   "id": "03064a37",
    "metadata": {},
    "source": [
     "### The Classical LLN\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dee313f8",
+   "id": "43474177",
    "metadata": {},
    "source": [
     "### Proof\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3a65c1a",
+   "id": "7b46e6e5",
    "metadata": {},
    "source": [
     "### Illustration\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff9d6ba",
+   "id": "98c4305b",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e44ab6a",
+   "id": "34eb2988",
    "metadata": {},
    "source": [
     "The three distributions are chosen at random from a selection stored in the dictionary `distributions`."
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc49a3b",
+   "id": "b378e229",
    "metadata": {},
    "source": [
     "## CLT\n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da68bfe4",
+   "id": "a456185b",
    "metadata": {},
    "source": [
     "### Statement of the Theorem\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3934f53",
+   "id": "c6db1f87",
    "metadata": {},
    "source": [
     "### Intuition\n",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d744bc3e",
+   "id": "ad64c3eb",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "717f51d6",
+   "id": "235523e6",
    "metadata": {},
    "source": [
     "When $ n = 1 $, the distribution is flat — one success or no successes\n",
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec328af9",
+   "id": "dbd600f9",
    "metadata": {},
    "source": [
     "### Simulation 1\n",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c74836ed",
+   "id": "91d66f17",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "296690b0",
+   "id": "f5ef0cdd",
    "metadata": {},
    "source": [
     "Notice the absence of for loops — every operation is vectorized, meaning that the major calculations are all shifted to highly optimized C code.\n",
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5443935",
+   "id": "39e10193",
    "metadata": {},
    "source": [
     "### Simulation 2\n",
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4b93088",
+   "id": "bb4d8994",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e9613ea",
+   "id": "406b7c2d",
    "metadata": {},
    "source": [
     "As expected, the distribution smooths out into a bell curve as $ n $\n",
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04fbd0f8",
+   "id": "023bef11",
    "metadata": {},
    "source": [
     "### The Multivariate Case\n",
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05b89f27",
+   "id": "7ed84788",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f318d9f",
+   "id": "f99acbd8",
    "metadata": {},
    "source": [
     "## Exercise 5.1\n",
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6b554d7",
+   "id": "4987958a",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 5.1](https://python.quantecon.org/#lln_ex1)\n",
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "240c5049",
+   "id": "46e0a335",
    "metadata": {
     "hide-output": false
    },
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88cece42",
+   "id": "39829c2d",
    "metadata": {},
    "source": [
     "What happens when you replace $ [0, \\pi / 2] $ with\n",
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c78c2a2",
+   "id": "5d802cc3",
    "metadata": {},
    "source": [
     "## Exercise 5.2\n",
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37ca47e8",
+   "id": "92c2c1e4",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 5.2](https://python.quantecon.org/#lln_ex2)\n",
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "645a1d04",
+   "id": "507ee9a1",
    "metadata": {
     "hide-output": false
    },
@@ -1099,7 +1099,7 @@
   }
  ],
  "metadata": {
-  "date": 1705976157.040091,
+  "date": 1706246575.2237282,
   "filename": "lln_clt.md",
   "kernelspec": {
    "display_name": "Python",
