--- a/mix_model.ipynb
+++ b/mix_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7229c8fb",
+   "id": "c1fa7c5b",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6da50487",
+   "id": "5a3a6881",
    "metadata": {},
    "source": [
     "# Incorrect Models\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deec9d06",
+   "id": "7cf3c80d",
    "metadata": {
     "hide-output": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce5d3003",
+   "id": "27c6975f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1add8b44",
+   "id": "5dc2db89",
    "metadata": {
     "hide-output": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e3fa624",
+   "id": "f0240bcd",
    "metadata": {},
    "source": [
     "Let’s use Python to generate two beta distributions"
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fd26375",
+   "id": "4383c559",
    "metadata": {
     "hide-output": false
    },
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa40afd",
+   "id": "a00e76b3",
    "metadata": {
     "hide-output": false
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7740c73",
+   "id": "347165f3",
    "metadata": {},
    "source": [
     "We’ll also use the following Python code to prepare some informative simulations"
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c2456f0",
+   "id": "84f91558",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1089a481",
+   "id": "f99544dc",
    "metadata": {
     "hide-output": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaaf5152",
+   "id": "14551113",
    "metadata": {},
    "source": [
     "## Sampling from  Compound Lottery $ H $\n",
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d9b98f8",
+   "id": "d42d38ba",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38a72298",
+   "id": "b7d7662d",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "781b256c",
+   "id": "5bcf8f46",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d71b800",
+   "id": "b2247e23",
    "metadata": {
     "hide-output": false
    },
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4470996",
+   "id": "233c95f2",
    "metadata": {},
    "source": [
     "**Note:** With numba acceleration the first method is actually only slightly slower than the second when we generated 1,000,000 samples."
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7375ffdf",
+   "id": "f15b5317",
    "metadata": {},
    "source": [
     "## Type 1 Agent\n",
@@ -428,20 +428,20 @@
     "\n",
     "<a id='equation-equation-eq-recur1'></a>\n",
     "$$\n",
-    "\\pi_t=\\frac{\\pi_{t-1} l_t(w_t)}{\\pi_{t-1} l_t(w_t)+1-\\pi_{t-1}} \\tag{17.1}\n",
+    "\\pi_t=\\frac{\\pi_{t-1} l_t(w_t)}{\\pi_{t-1} l_t(w_t)+1-\\pi_{t-1}} \\tag{16.1}\n",
     "$$\n",
     "\n",
     "with $ \\pi_{0} $ being a Bayesian prior probability that $ q = f $,\n",
     "i.e., a personal or subjective belief about $ q $ based on our having seen no data.\n",
     "\n",
     "Below we define a Python function that updates belief $ \\pi $ using\n",
-    "likelihood ratio $ \\ell $ according to  recursion [(17.1)](#equation-equation-eq-recur1)"
+    "likelihood ratio $ \\ell $ according to  recursion [(16.1)](#equation-equation-eq-recur1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1acec3e3",
+   "id": "b7c8c961",
    "metadata": {
     "hide-output": false
    },
@@ -459,10 +459,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63bf1e7b",
+   "id": "302f1750",
    "metadata": {},
    "source": [
-    "Formula [(17.1)](#equation-equation-eq-recur1) can be generalized  by iterating on it and thereby deriving an\n",
+    "Formula [(16.1)](#equation-equation-eq-recur1) can be generalized  by iterating on it and thereby deriving an\n",
     "expression for  the time $ t $ posterior $ \\pi_{t+1} $ as a function\n",
     "of the time $ 0 $ prior $ \\pi_0 $ and the likelihood ratio process\n",
     "$ L(w^{t+1}) $ at time $ t $.\n",
@@ -515,18 +515,18 @@
     "\n",
     "<a id='equation-equation-eq-bayeslaw103'></a>\n",
     "$$\n",
-    "\\pi_{t+1}=\\frac{\\pi_{0}L\\left(w^{t+1}\\right)}{\\pi_{0}L\\left(w^{t+1}\\right)+1-\\pi_{0}}. \\tag{17.2}\n",
+    "\\pi_{t+1}=\\frac{\\pi_{0}L\\left(w^{t+1}\\right)}{\\pi_{0}L\\left(w^{t+1}\\right)+1-\\pi_{0}}. \\tag{16.2}\n",
     "$$\n",
     "\n",
-    "Formula [(17.2)](#equation-equation-eq-bayeslaw103) generalizes formula [(17.1)](#equation-equation-eq-recur1).\n",
+    "Formula [(16.2)](#equation-equation-eq-bayeslaw103) generalizes formula [(16.1)](#equation-equation-eq-recur1).\n",
     "\n",
-    "Formula [(17.2)](#equation-equation-eq-bayeslaw103)  can be regarded as a one step  revision of prior probability $ \\pi_0 $ after seeing\n",
+    "Formula [(16.2)](#equation-equation-eq-bayeslaw103)  can be regarded as a one step  revision of prior probability $ \\pi_0 $ after seeing\n",
     "the batch of data $ \\left\\{ w_{i}\\right\\} _{i=1}^{t+1} $."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1eee0a72",
+   "id": "726fee6b",
    "metadata": {},
    "source": [
     "## What a type 1 Agent Learns when Mixture $ H $ Generates Data\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09f3d179",
+   "id": "00d0b3fd",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3558a37f",
+   "id": "f97e9c8b",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1017764f",
+   "id": "30cfe281",
    "metadata": {},
    "source": [
     "The above graph shows a sample path of the log likelihood ratio process as the blue dotted line, together with\n",
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "532f9ce5",
+   "id": "261f4a05",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "871677fc",
+   "id": "655952e8",
    "metadata": {},
    "source": [
     "Evidently, $ \\alpha $ is having a big effect on the destination of $ \\pi_t $ as $ t \\rightarrow + \\infty $"
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70d3623d",
+   "id": "444d7aab",
    "metadata": {},
    "source": [
     "## Kullback-Leibler Divergence Governs Limit of $ \\pi_t $\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddc5ec0e",
+   "id": "130b56ba",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0873c41a",
+   "id": "75480e0c",
    "metadata": {},
    "source": [
     "Let us first plot the KL divergences $ KL_g\\left(\\alpha\\right), KL_f\\left(\\alpha\\right) $ for each $ \\alpha $."
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0adcd667",
+   "id": "c2aafaaf",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80241856",
+   "id": "3fad9513",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f42e1b4c",
+   "id": "2866e834",
    "metadata": {},
    "source": [
     "Let’s compute an $ \\alpha $ for which  the KL divergence  between $ h $ and $ g $ is the same as that between $ h $ and $ f $."
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3741ae46",
+   "id": "c47fb858",
    "metadata": {
     "hide-output": false
    },
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0312ecdf",
+   "id": "86592da3",
    "metadata": {},
    "source": [
     "We can compute and plot the convergence point $ \\pi_{\\infty} $ for each $ \\alpha $ to verify that the convergence is indeed governed by the KL divergence.\n",
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8b195ae",
+   "id": "504708fb",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a6662d2",
+   "id": "98486c46",
    "metadata": {},
    "source": [
     "Evidently, our type 1 learner who applies Bayes’ law to his misspecified set of statistical models eventually learns an approximating model that is as close as possible to the true model, as measured by its\n",
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afef46e5",
+   "id": "4a75f230",
    "metadata": {},
    "source": [
     "## Type 2 Agent\n",
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90d39f49",
+   "id": "24a657c1",
    "metadata": {
     "hide-output": false
    },
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e6ab8d7",
+   "id": "b0f9d71c",
    "metadata": {},
    "source": [
     "The following code generates the graph below that displays Bayesian posteriors for $ \\alpha $ at various history lengths."
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79e43a9c",
+   "id": "fdcf2c63",
    "metadata": {
     "hide-output": false
    },
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8a0fcce",
+   "id": "79e91345",
    "metadata": {},
    "source": [
     "Evidently,  the Bayesian posterior  narrows in on the true value  $ \\alpha = .8 $ of the mixing parameter as the length of a history of observations grows."
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dfcc59a",
+   "id": "7a9a86b7",
    "metadata": {},
    "source": [
     "## Concluding Remarks\n",
@@ -1028,7 +1028,7 @@
   }
  ],
  "metadata": {
-  "date": 1705976157.0881357,
+  "date": 1706246575.270256,
   "filename": "mix_model.md",
   "kernelspec": {
    "display_name": "Python",
