--- a/prob_matrix.ipynb
+++ b/prob_matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "64e22c51",
+   "id": "861de990",
    "metadata": {},
    "source": [
     "# Elementary Probability with Matrices\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f810df5",
+   "id": "b9ae3c5c",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f91b47",
+   "id": "cd681780",
    "metadata": {},
    "source": [
     "As usual, we’ll start with some imports"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a03c7d",
+   "id": "78cfb796",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "528fdc0b",
+   "id": "cc170ccc",
    "metadata": {},
    "source": [
     "## Sketch of Basic Concepts\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5bffef8",
+   "id": "ecfbeb9a",
    "metadata": {},
    "source": [
     "## What Does Probability Mean?\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8da0a76",
+   "id": "4825b3b2",
    "metadata": {},
    "source": [
     "## Representing  Probability Distributions\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e717097d",
+   "id": "7dc8bc33",
    "metadata": {},
    "source": [
     "## Univariate Probability Distributions\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd80a253",
+   "id": "d5f91486",
    "metadata": {},
    "source": [
     "### Discrete random variable\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e00aa3f1",
+   "id": "cb35f959",
    "metadata": {},
    "source": [
     "### Continuous random variable\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d25c5778",
+   "id": "05f5f439",
    "metadata": {},
    "source": [
     "## Bivariate Probability Distributions\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f58e3dce",
+   "id": "6156036c",
    "metadata": {},
    "source": [
     "## Marginal Probability Distributions\n",
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cdf8411",
+   "id": "43b60c1b",
    "metadata": {},
    "source": [
     "## Conditional Probability  Distributions\n",
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b239d39",
+   "id": "4d1bf70e",
    "metadata": {},
    "source": [
     "## Statistical Independence\n",
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a6e5ec6",
+   "id": "8ce22fcc",
    "metadata": {},
    "source": [
     "## Means and Variances\n",
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d0730d5",
+   "id": "d475934c",
    "metadata": {},
    "source": [
     "## Generating Random Numbers\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad0f0575",
+   "id": "1d06f802",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b39f1c4d",
+   "id": "095d2783",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7969cf3f",
+   "id": "8fd552ba",
    "metadata": {},
    "source": [
     "**Geometric distribution**\n",
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f77230bf",
+   "id": "0fca3d43",
    "metadata": {
     "hide-output": false
    },
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6e8a604",
+   "id": "35937981",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41645d41",
+   "id": "c4249078",
    "metadata": {
     "hide-output": false
    },
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35311efb",
+   "id": "fb21bbe3",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75034941",
+   "id": "2a72f522",
    "metadata": {},
    "source": [
     "## Some Discrete Probability Distributions\n",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "207da53e",
+   "id": "0800ba7f",
    "metadata": {},
    "source": [
     "## Geometric distribution\n",
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cd1e3c4",
+   "id": "e1ea12f5",
    "metadata": {
     "hide-output": false
    },
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50e8fcaa",
+   "id": "b4df0fa4",
    "metadata": {},
    "source": [
     "### Newcomb–Benford distribution\n",
@@ -902,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58bec25b",
+   "id": "84f3afe8",
    "metadata": {
     "hide-output": false
    },
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d5659b",
+   "id": "22c15271",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "096513c7",
+   "id": "655b2880",
    "metadata": {},
    "source": [
     "### Pascal (negative binomial) distribution\n",
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f4d4b55",
+   "id": "c170da31",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f5e397d",
+   "id": "f8e259dc",
    "metadata": {},
    "source": [
     "## Continuous Random Variables"
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "198e69d3",
+   "id": "67716ef3",
    "metadata": {},
    "source": [
     "### Univariate Gaussian distribution\n",
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8d44f29",
+   "id": "914d6b8d",
    "metadata": {
     "hide-output": false
    },
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d819dfb3",
+   "id": "c0d8fc46",
    "metadata": {
     "hide-output": false
    },
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eff3dde",
+   "id": "92cc6174",
    "metadata": {},
    "source": [
     "### Uniform Distribution\n",
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5bfa7f",
+   "id": "3e4cbac5",
    "metadata": {
     "hide-output": false
    },
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b8b63a7",
+   "id": "2ec43a4a",
    "metadata": {},
    "source": [
     "## A Mixed Discrete-Continuous Distribution\n",
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e26ebe8c",
+   "id": "cbaad9e2",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eecd381d",
+   "id": "5fc124eb",
    "metadata": {},
    "source": [
     "The analytical mean and variance can be computed:\n",
@@ -1194,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64e67cf0",
+   "id": "2b8e7659",
    "metadata": {
     "hide-output": false
    },
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da564eb2",
+   "id": "21d63f26",
    "metadata": {},
    "source": [
     "## Matrix Representation of Some Bivariate Distributions\n",
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf9cca53",
+   "id": "7a1047b3",
    "metadata": {
     "hide-output": false
    },
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3730315c",
+   "id": "a4f62d77",
    "metadata": {},
    "source": [
     "Here, we use exactly the inverse CDF technique to generate sample from the joint distribution $ F $."
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc6cf381",
+   "id": "84581d04",
    "metadata": {
     "hide-output": false
    },
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6e478aa",
+   "id": "69ae6629",
    "metadata": {
     "hide-output": false
    },
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16e8fe84",
+   "id": "135a5d60",
    "metadata": {},
    "source": [
     "Let’s  calculate population  marginal and conditional probabilities  using matrix algebra.\n",
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "303d2795",
+   "id": "a3f24436",
    "metadata": {
     "hide-output": false
    },
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37857b4e",
+   "id": "1f7d33dc",
    "metadata": {},
    "source": [
     "Let’s apply our code to some examples.\n",
@@ -1536,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56e810e8",
+   "id": "df37e57b",
    "metadata": {
     "hide-output": false
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeb56e33",
+   "id": "36c28bd6",
    "metadata": {
     "hide-output": false
    },
@@ -1564,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27dc8d0b",
+   "id": "c5106844",
    "metadata": {
     "hide-output": false
    },
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03620db9",
+   "id": "db852492",
    "metadata": {},
    "source": [
     "**Example 2**"
@@ -1585,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa33fdf",
+   "id": "a8a8cc77",
    "metadata": {
     "hide-output": false
    },
@@ -1601,7 +1601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0c30144",
+   "id": "f85f3486",
    "metadata": {
     "hide-output": false
    },
@@ -1614,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f174a533",
+   "id": "bc5a0204",
    "metadata": {
     "hide-output": false
    },
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fdc6f06",
+   "id": "6cbb709e",
    "metadata": {},
    "source": [
     "## A Continuous Bivariate Random Vector\n",
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f50cb57",
+   "id": "87abe2c0",
    "metadata": {
     "hide-output": false
    },
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8f0f158",
+   "id": "1627a0a3",
    "metadata": {
     "hide-output": false
    },
@@ -1691,7 +1691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86ea52d5",
+   "id": "87e186eb",
    "metadata": {
     "hide-output": false
    },
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d01c8a72",
+   "id": "7c92b6bc",
    "metadata": {},
    "source": [
     "**Joint Distribution**\n",
@@ -1715,7 +1715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aa9e95d",
+   "id": "2a2ff985",
    "metadata": {
     "hide-output": false
    },
@@ -1733,7 +1733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a76e8a08",
+   "id": "4c40c95c",
    "metadata": {
     "hide-output": false
    },
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3b8bb4b",
+   "id": "d505bf4f",
    "metadata": {},
    "source": [
     "Next  we can simulate from  a built-in `numpy` function  and calculate a **sample** marginal distribution from the sample mean and variance."
@@ -1762,7 +1762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28afdc99",
+   "id": "83bc7667",
    "metadata": {
     "hide-output": false
    },
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df6f28c8",
+   "id": "3d65d966",
    "metadata": {},
    "source": [
     "**Marginal distribution**"
@@ -1787,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dda1543",
+   "id": "e5b73c55",
    "metadata": {
     "hide-output": false
    },
@@ -1804,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e4d8759",
+   "id": "90071e8a",
    "metadata": {
     "hide-output": false
    },
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fde4f720",
+   "id": "46bc2d2c",
    "metadata": {},
    "source": [
     "**Conditional distribution**\n",
@@ -1848,7 +1848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebdc339b",
+   "id": "157af71f",
    "metadata": {
     "hide-output": false
    },
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a792adab",
+   "id": "6aabce4e",
    "metadata": {},
    "source": [
     "The mean and variance are computed by\n",
@@ -1881,7 +1881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1ec93d0",
+   "id": "5df999b0",
    "metadata": {
     "hide-output": false
    },
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1577a4e4",
+   "id": "3e946707",
    "metadata": {},
    "source": [
     "Fix $ x=1 $."
@@ -1910,7 +1910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd1bd4c4",
+   "id": "584e494e",
    "metadata": {
     "hide-output": false
    },
@@ -1925,7 +1925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d13741b",
+   "id": "12b1c14e",
    "metadata": {
     "hide-output": false
    },
@@ -1943,7 +1943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eebf623d",
+   "id": "c0d067e6",
    "metadata": {},
    "source": [
     "We compare  with the analytically computed parameters and note that they are close."
@@ -1952,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6276542",
+   "id": "29a40fb8",
    "metadata": {
     "hide-output": false
    },
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75a9baed",
+   "id": "a9e0b953",
    "metadata": {},
    "source": [
     "## Sum of Two Independently Distributed Random Variables\n",
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2baa3fb2",
+   "id": "6ba22ad7",
    "metadata": {},
    "source": [
     "## Transition Probability Matrix\n",
@@ -2068,7 +2068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf1b2da",
+   "id": "98a5487d",
    "metadata": {},
    "source": [
     "## Coupling\n",
@@ -2192,7 +2192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0cf1e62",
+   "id": "701a296f",
    "metadata": {},
    "source": [
     "## Copula Functions\n",
@@ -2245,7 +2245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05885a51",
+   "id": "b02b33c2",
    "metadata": {
     "hide-output": false
    },
@@ -2273,7 +2273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a1d4ab9",
+   "id": "44796063",
    "metadata": {
     "hide-output": false
    },
@@ -2301,7 +2301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b88c6fb5",
+   "id": "ac7ffa33",
    "metadata": {},
    "source": [
     "Let’s now take our two marginal  distributions, one for $ X $, the other for  $ Y $, and construct  two distinct couplings.\n",
@@ -2327,7 +2327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d17a943",
+   "id": "89e14ce2",
    "metadata": {
     "hide-output": false
    },
@@ -2362,7 +2362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6546eacf",
+   "id": "232b8c75",
    "metadata": {
     "hide-output": false
    },
@@ -2388,7 +2388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b958789",
+   "id": "9b5419be",
    "metadata": {
     "hide-output": false
    },
@@ -2416,7 +2416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b1ef84",
+   "id": "8df1d77d",
    "metadata": {},
    "source": [
     "Now, let’s construct another  joint distribution that is  also a coupling of $ X $ and $ Y $\n",
@@ -2432,7 +2432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5de5d366",
+   "id": "771c7d33",
    "metadata": {
     "hide-output": false
    },
@@ -2467,7 +2467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9deb2afb",
+   "id": "099613d9",
    "metadata": {
     "hide-output": false
    },
@@ -2493,7 +2493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a120796d",
+   "id": "0ce99685",
    "metadata": {
     "hide-output": false
    },
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2fa0f66",
+   "id": "c4bff8b0",
    "metadata": {},
    "source": [
     "We have verified that both joint distributions, $ c_1 $ and $ c_2 $, have identical marginal distributions of $ X $ and $ Y $, respectively.\n",
@@ -2531,7 +2531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b6e28a8",
+   "id": "812bd5b2",
    "metadata": {},
    "source": [
     "## Time Series\n",
@@ -2568,7 +2568,7 @@
   }
  ],
  "metadata": {
-  "date": 1705976157.750628,
+  "date": 1706246575.8898537,
   "filename": "prob_matrix.md",
   "kernelspec": {
    "display_name": "Python",
